# content-craft-ai

./: .editorconfig  .gitignore  AI_AGENT_INSTRUCTIONS.md  AI_AGENT_QUICKSTART.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md
.cursor/rules/: rules.mdc
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  brand.py  content.py  image.py  product.py  seo.py
backend/app/services/: __init__.py  brand_service.py  content_service.py  image_service.py  llm_provider.py  product_service.py  prompts.py  seo_service.py
backend/app/utils/: logger.py
docs/: api-contracts.md  architecture.md  demo-scripts.md
infra/: Dockerfile  README.md  docker-compose.yml  nginx.conf
plugin/: contentcraft-ai.php
plugin/admin/assets/css/: admin.css
plugin/admin/assets/js/: content-studio.js
plugin/admin/views/: brand-voice.php  content-studio.php  dashboard.php  settings.php
plugin/includes/: class-admin.php  class-api-client.php  class-autoloader.php  class-logger.php  class-rest-api.php  class-woocommerce-integration.php  helpers.php  hooks.php
todo-management/: CURRENT_PROGRESS.md  PROJECT_STATUS.md  README.md  TASKS_BREAKDOWN.md
